[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tn4ml"
description = "Tensor Networks for Machine Learning"
version = "0.1"
readme = "README.md"
dependencies = [
	"autoray>=0.3.0",
	"dask",
	"funcy",
	"numpy",
	"opt_einsum>=3.3.0",
	"quimb>=1.4.1",
	"jaxlib"
	"jax",
]

[project.optional-dependencies]
dev = ["pytest", "black", "pylint"]

[tool.setuptools]
packages = ["tn4ml"]