[metadata]
name = tn4ml
description = "Tensor Networks for Machine Learning"
version = 0.1
author="Sergio Sanchez Ramirez, Ema Puljak, Sergi Masot Llima, Jofre Valles Muns"

[options]
packages = find:
python_requires = >=3.8
setup_requires =
	setuptools >= 38.3.0
install_requires =
	autoray>=0.3.0
	dask
	funcy
	numpy
	opt_einsum>=3.3.0
	quimb>=1.4.1
	jaxlib
	jax
	pandas

[options.extras_require]
docs =
	sphinx
	sphinx-book-theme
	ipykernel
	nbsphinx