[metadata]
name = tn4ml
description = "Tensor Networks for Machine Learning"
version = 1.0
author="Ema Puljak, Sergio Sanchez Ramirez, Sergi Masot Llima, Jofre Vallès-Muns"
long_description = file: README.md
long_description_content_type="text/markdown"
license = "MIT"
classifiers =
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.8
setup_requires =
	setuptools >= 38.3.0
install_requires =
	autoray>=0.3.0
	dask
	funcy
	numpy
	opt_einsum>=3.3.0
	quimb>=1.4.1
	jaxlib
	jax
	optax
	flax
	pandas

[options.extras_require]
docs =
	sphinx>=2.0
	sphinx-book-theme
	ipykernel
	nbsphinx
	sphinxcontrib-bibtex
	sphinxcontrib-devhelp
	sphinxcontrib-htmlhelp
	sphinxcontrib-jsmath
	sphinxcontrib-qthelp
	sphinxcontrib-serializinghtml
	sphinx-rtd-theme
	sphinx-copybutton
	sphinx-gallery
	tensorflow
test =
	pytest